2005-08-19  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/EventEditor.py: hacked about to make add work at least.

2005-08-19  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/TreeTips.py: set default delay to 2s
	
2005-08-19  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/ToolTips.py: tooltip fix
	
2005-08-19  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
        * src/DisplayModels.py: call new tooltips generator
	* src/PeopleModel.py: call new tooltips generator
	* src/ToolTips.py: new tooltips generator added
	
2005-08-19  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
        * src/DisplayModels.py: added basic tooltip support to models
	* src/PageView.py: added basic tooltip support
	* src/PeopleModel.py: added basic tooltip support
	
2005-08-17  Alex Roitman  <shura@gramps-project.org>
	* various: merge changes made in gramps20 branch with main trunk.

2005-08-17  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Makefile.am
	* src/plugins/Makefile.am: ScratchPad moved folder.

2005-08-17  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/RepositoryView.py: remove method now works again.
	
2005-08-17  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/ScratchPad.py: fix some issues with new window management and dbstate
	* src/scratchpad.glade: moved from src/plugins
	* src/plugins/ScratchPad.py: removed
	* src/plugins/scratchpad.glade: removed

2005-08-17  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/EditRepository.py: fixes for lack of parent window handles 
	use of dbstate. Commented out code to bold labels for now as
	Utils.bold_label does not work. Renamed DelReposQuery.
	* src/EditSource.py: fixed repository ref edit code to use dbstate.
	* src/RepositoryRefEdit.py: fixes for dbstate and commented out window
	management code. 
	* src/RepositoryView.py: fixes for dbstate, commented out remove repos
	code for now as it does not work. Fixes edit repository call.
	